09122022 DYV modify with audio

--- a/Downloading Youtube Videos/Downloading Youtube Videos.ipynb
+++ b/Downloading Youtube Videos/Downloading Youtube Videos.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'D:\\\\test\\\\Basic_Python\\\\Downloading Youtube Videos\\\\Video/OM Meditation for Positive Energy  Mindfulness Mantra - SPIRITUAL MEDITATION.mp4'"
+       "'D:\\\\test\\\\Basic_Python\\\\Downloading Youtube Videos\\\\Video/Ajay-Atul Devotional songsAjay Atul Special Part 2ClassicAll time FavouriteMarathi Songs.mp4'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19,7 +19,7 @@
    "source": [
     "import pytube\n",
     "\n",
-    "url = 'https://www.youtube.com/watch?v=3mMqQXlCtTM'\n",
+    "url = 'https://www.youtube.com/watch?v=ljCJ01aSctY&t=104s'\n",
     "\n",
     "youtube = pytube.YouTube(url)\n",
     "video = youtube.streams.get_highest_resolution()\n",
@@ -28,28 +28,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "chunk:   0%|                                                             | 40/20236 [00:00<00:50, 396.05it/s, now=None]"
+      "\r",
+      "chunk:   0%|                                                                       | 0/67915 [00:00<?, ?it/s, now=None]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MoviePy - Writing audio in Audio/06 Om Namah Shivaya 108 Times.mp3\n"
+      "MoviePy - Writing audio in Audio/ Ajay-Atul Devotional songsAjay Atul Special Part 2ClassicAll time FavouriteMarathi Songs.mp3\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                                                       "
+      "                                                                                                                       \r"
      ]
     },
     {
@@ -58,20 +59,13 @@
      "text": [
       "MoviePy - Done.\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r"
-     ]
     }
    ],
    "source": [
     "import moviepy.editor as mp\n",
     "\n",
-    "number = \"06\"\n",
-    "name = \"Om Namah Shivaya 108 Times\"\n",
+    "number = \"\"\n",
+    "name = \"Ajay-Atul Devotional songsAjay Atul Special Part 2ClassicAll time FavouriteMarathi Songs\"\n",
     "my_clip = mp.VideoFileClip(rf\"Video/{name}.mp4\")\n",
     "my_clip.audio.write_audiofile(rf\"Audio/{number} {name}.mp3\")"
    ]
