--- a/Notes/Assignment/Assignment 1.ipynb
+++ b/Notes/Assignment/Assignment 1.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7e1ec0d5",
    "metadata": {},
    "source": [
     "## 1. In the below elements which of them are values or an expression? \n",
@@ -19,7 +18,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6de10c53",
    "metadata": {},
    "source": [
     "## 2. What is the difference between string and variable?\n",
@@ -33,7 +31,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09659996",
    "metadata": {},
    "source": [
     "## Example of an immutable and mutable:"
@@ -42,7 +39,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "85508535",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +61,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fe20940c",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +92,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40dfef4b",
    "metadata": {},
    "source": [
     "## 3. Describe three different data types.\n",
@@ -112,7 +106,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "977971cd",
    "metadata": {},
    "source": [
     "## 4. What is an expression made up of? What do all expressions do?\n",
@@ -129,7 +122,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da0e6ff7",
    "metadata": {},
    "source": [
     "## 5. This assignment statements, like spam = 10. What is the difference between an expression and a statement?\n",
@@ -149,7 +141,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9461e181",
    "metadata": {},
    "source": [
     "## 6. After running the following code, what does the variable bacon contain?\n",
@@ -166,7 +157,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "852c2255",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +177,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c829fb1",
    "metadata": {},
    "source": [
     "## 7. What should the values of the following two terms be?\n",
@@ -204,7 +193,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "06d12a4e",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +211,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e899148",
    "metadata": {},
    "source": [
     "## 8. Why is eggs a valid variable name while 100 is invalid?\n",
@@ -244,7 +231,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "251f60fd",
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +252,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "18cc3510",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +276,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a0c26b5f",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +295,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "ed6319cd",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +312,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2d0bc77",
    "metadata": {},
    "source": [
     "## 9. What three functions can be used to get the integer, floating-point number, or string version of a value?\n",
@@ -350,7 +332,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "37b2e75b",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +352,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "272ddfc6",
    "metadata": {},
    "source": [
     "## 10. Why does this expression cause an error? How can you fix it?\n",
@@ -392,7 +372,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "3ce2d401",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +393,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "d038cb2b",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +413,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6883d93e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -443,7 +420,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -457,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
