--- a/Notes/Assignment/Assignment 2.ipynb
+++ b/Notes/Assignment/Assignment 2.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c29000cf",
    "metadata": {},
    "source": [
     "## 1.What are the two values of the Boolean data type? How do you write them?\n",
@@ -19,7 +18,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9c058a66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +28,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f3ebfc27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +38,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "df6f36c3",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +58,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1165247f",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +77,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd392d87",
    "metadata": {},
    "source": [
     "## 2. What are the three different types of Boolean operators?\n",
@@ -95,7 +89,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a3c968f2",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +112,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "fe96e221",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +135,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "fe4af8e0",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +154,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0eb57c5",
    "metadata": {},
    "source": [
     "## 3. Make a list of each Boolean operator's truth tables (i.e. every possible combination of Boolean values for the operator and what it evaluate ).\n",
@@ -191,7 +181,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "50f64908",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +205,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "164941ca",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +229,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5a3c6c1f",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +248,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f318e3a9",
    "metadata": {},
    "source": [
     "## 4. What are the values of the following expressions ?\n",
@@ -285,7 +271,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "b5dba6f3",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +297,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "018dec2d",
    "metadata": {},
    "source": [
     "## 5. What are the six comparison operators?\n",
@@ -324,7 +308,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f2c423a",
    "metadata": {},
    "source": [
     "## 6. How do you tell the difference between the equal to and assignment operators? Describe a condition and when you would use one ?\n",
@@ -352,7 +335,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea28e7ad",
    "metadata": {},
    "source": [
     "## 7. Identify the three blocks in this code:\n",
@@ -363,7 +345,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "cc6a55f4",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +374,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf68f308",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -401,7 +381,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -415,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
