--- a/Notes/Challenges.ipynb
+++ b/Notes/Challenges.ipynb
@@ -55,7 +55,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.7 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
