22122022 add automated process in video + audio

--- a/Downloading Youtube Videos/Downloading Youtube Videos.ipynb
+++ b/Downloading Youtube Videos/Downloading Youtube Videos.ipynb
@@ -2,72 +2,64 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'D:\\\\test\\\\Basic_Python\\\\Downloading Youtube Videos\\\\Video/Ajay-Atul Devotional songsAjay Atul Special Part 2ClassicAll time FavouriteMarathi Songs.mp4'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# lib's\n",
+    "import os\n",
     "import pytube\n",
+    "import moviepy.editor as mp\n",
     "\n",
-    "url = 'https://www.youtube.com/watch?v=ljCJ01aSctY&t=104s'\n",
+    "# variable's\n",
+    "url = 'https://www.youtube.com/watch?v=vGBPMAeZDeg'\n",
+    "video_folder_path =  'Video'\n",
+    "audio_folder_path =  'Audio'\n",
     "\n",
+    "# download video\n",
     "youtube = pytube.YouTube(url)\n",
-    "video = youtube.streams.get_highest_resolution()\n",
-    "video.download('Video/')"
+    "video = youtube.streams.get_highest_resolution() # get the highest resolution video\n",
+    "video.download(video_folder_path) # save video\n",
+    "\n",
+    "# download audio\n",
+    "my_clip = mp.VideoFileClip(os.path.join(video_folder_path,video.default_filename)) # load the video file\n",
+    "my_clip.audio.write_audiofile(f\"{os.path.join(audio_folder_path,video.default_filename)[:-4]}.mp3\") # save the audio file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "chunk:   0%|                                                                       | 0/67915 [00:00<?, ?it/s, now=None]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MoviePy - Writing audio in Audio/ Ajay-Atul Devotional songsAjay Atul Special Part 2ClassicAll time FavouriteMarathi Songs.mp3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                                                       \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MoviePy - Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import moviepy.editor as mp\n",
+    "# import pytube\n",
     "\n",
-    "number = \"\"\n",
-    "name = \"Ajay-Atul Devotional songsAjay Atul Special Part 2ClassicAll time FavouriteMarathi Songs\"\n",
-    "my_clip = mp.VideoFileClip(rf\"Video/{name}.mp4\")\n",
-    "my_clip.audio.write_audiofile(rf\"Audio/{number} {name}.mp3\")"
+    "# url = 'https://www.youtube.com/watch?v=ImIy9Rya0dI'\n",
+    "\n",
+    "# youtube = pytube.YouTube(url)\n",
+    "# video = youtube.streams.get_highest_resolution()\n",
+    "# video.download('Video/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import moviepy.editor as mp\n",
+    "\n",
+    "# number = \"B1\"\n",
+    "# name = \"How to Mind Management Not Time Management by David Kadavy  Kitab City\"\n",
+    "# my_clip = mp.VideoFileClip(rf\"Video/{name}.mp4\")\n",
+    "# my_clip.audio.write_audiofile(rf\"Audio/{number} {name}.mp3\")"
    ]
   },
   {
