20230114 Pyspark GroupBy And Aggregate Functions

--- a/Notes/03 Pyspark with Python/Pyspark With Python.ipynb
+++ b/Notes/03 Pyspark with Python/Pyspark With Python.ipynb
@@ -2201,6 +2201,327 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pyspark GroupBy And Aggregate Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.analyticsvidhya.com/blog/2022/05/data-preprocessing-using-pyspark-handling-missing-values/\n",
+    "# read excel and convert to csv\n",
+    "import pandas as pd\n",
+    "# read .xlsx\n",
+    "df = pd.read_excel('test2.xlsx')\n",
+    "# to save in .csv\n",
+    "df.to_csv('test2.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---------+---------+---+------+-------------------+----------+--------------------+----------+------+\n",
+      "|_c0|     Name|    Sname|Age|Gender|           Email_ID|  Adderess|             Profile|Experience|Salary|\n",
+      "+---+---------+---------+---+------+-------------------+----------+--------------------+----------+------+\n",
+      "|  0|    kiran|  mungkar| 29|     m|    kiran@gmail.com|     virar|        data analyst|       1.8| 94892|\n",
+      "|  1|    kapil|  nargund| 27|     m|    kapil@gmail.com|     vasai|        data analyst|       3.2| 93239|\n",
+      "|  2|    vinod|    kadam| 31|     m|    vinod#gmail.com|  borivali|             teacher|       2.8| 83308|\n",
+      "|  3|   samira|     shah| 28|     f|   samira@yahoo.com|  borivali|             teacher|       2.7| 39953|\n",
+      "|  4|   vidhan|     wani| 27|     m| vidhan@hotmail.com| bhayandar|automation developer|       1.5| 70240|\n",
+      "|  5|  abhijit| panpatil| 27|     m|  abhijit@gmail.com|   palghar|automation developer|       4.5| 88133|\n",
+      "|  6|  namrata|deshamukh| 28|     f|  manrata@yahoo.com|  borivali| front end developer|       2.6| 60974|\n",
+      "|  7|     neha|     raut| 27|     f|   neha@hotmail.com|     virar|             teacher|       4.8| 47786|\n",
+      "|  8|  shubham|     neve| 26|     m|shubham@hotmail.com|   palghar|automation developer|       3.5| 63061|\n",
+      "|  9|  darshan|    gohil| 27|     m|  darshan@gmail.com|     malad|       .net devloper|       3.4| 54650|\n",
+      "| 10|     anuj|    kumar| 28|     m|     anuj@yahoo.com|nalasopara|   backend developer|       4.7| 49022|\n",
+      "| 11| harshali|    desai| 27|     f| harshali@gmail.com|  borivali|      java developer|       4.1| 31332|\n",
+      "| 12|   nitesh|  kanojia| 26|     m|   nitesh@gmail.com|     vasai|        data analyst|       2.3| 68010|\n",
+      "| 13|   nitesh|   angare| 26|     m| nitesh_a@gmail.com|     virar|        bi developer|       2.0| 86432|\n",
+      "| 14|    vidit|     shah| 29|     m|    vidit@yahoo.com|     malad|    business analyst|       4.0| 40603|\n",
+      "| 15| shradhha|   mahale| 28|     f| shraddha@yahoo.com|   palghar|   backend developer|       3.1| 89113|\n",
+      "| 16|    jinal|     jain| 30|     f|    jinal@gmail.com|     malad|     software tester|       3.2| 78918|\n",
+      "| 17|    rohit|   shetty| 28|     m|    rohit@gmail.com|     malad| front end developer|       2.7| 31957|\n",
+      "| 18| siddhesh|    patil| 28|     m| siddhesh@yahoo.com|     virar| front end developer|       2.7| 71443|\n",
+      "| 19|    nidhi|  divecha| 28|     f|  nidhi@hotmail.cpm|     vasai|             teacher|       3.2| 36965|\n",
+      "| 20|    harsh|  divecha| 30|     m|    harsh@yahoo.com|     vasai|   software security|       4.1| 69140|\n",
+      "| 21|   snehal|    matre| 27|     f|   snehal@gmail.com| bhayandar|             teacher|       2.4| 73167|\n",
+      "| 22|    medha|    patil| 32|     f|    medha@yahoo.com|  borivali|       .net devloper|       3.6| 54845|\n",
+      "| 23|    sonal|  gondane| 31|     f|    sonal@gmail.com|  borivali|             teacher|       4.3| 32050|\n",
+      "| 24|    sunny|   savita| 32|     m|    sunny@gmail.com| bhayandar|             teacher|       3.9| 70028|\n",
+      "| 25|    nayan|korgawkar| 29|     m|  nayan@hotmail.com|     virar|             maneger|       4.5| 55938|\n",
+      "| 26|sudhanshu|    kumar| 32|     m|sudhanshu@gmail.com|     dadar|             teacher|       5.6| 69432|\n",
+      "| 27|    kirsh|     naik| 32|     m|    krish@gmail.com|     dadar|             teacher|       5.0| 88794|\n",
+      "| 28|     raju| narvekar| 34|     m|   raju@hotmail.com|     parel|             maneger|       5.0| 72535|\n",
+      "| 29|     sonu|    gawde| 35|     m|     sonu@yahoo.com|     virar|     software tester|       3.1| 51803|\n",
+      "| 30|   sonali|    desai| 28|     f|   sonali@yahoo.com|     malad|    business analyst|       2.5| 43783|\n",
+      "| 31| utkarsha|    kadam| 29|     f| utkarsha@gmail.com|     virar|             teacher|       4.5| 33415|\n",
+      "| 32|    pawan|    parab| 30|     m|    pawan@yahoo.com|   palghar|             maneger|       2.0| 38595|\n",
+      "+---+---------+---------+---+------+-------------------+----------+--------------------+----------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# connect seseeion\n",
+    "from pyspark.sql import SparkSession\n",
+    "spark = SparkSession.builder.appName('Practrice').getOrCreate()\n",
+    "\n",
+    "# read .csv file \n",
+    "ps_df = spark.read.csv('test2.csv', header=True, inferSchema=True)\n",
+    "ps_df.show(40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- _c0: integer (nullable = true)\n",
+      " |-- Name: string (nullable = true)\n",
+      " |-- Sname: string (nullable = true)\n",
+      " |-- Age: integer (nullable = true)\n",
+      " |-- Gender: string (nullable = true)\n",
+      " |-- Email_ID: string (nullable = true)\n",
+      " |-- Adderess: string (nullable = true)\n",
+      " |-- Profile: string (nullable = true)\n",
+      " |-- Experience: double (nullable = true)\n",
+      " |-- Salary: integer (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "ps_df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----------+\n",
+      "|             Profile|sum(Salary)|\n",
+      "+--------------------+-----------+\n",
+      "|             teacher|     574898|\n",
+      "|     software tester|     130721|\n",
+      "|       .net devloper|     109495|\n",
+      "|   software security|      69140|\n",
+      "|automation developer|     221434|\n",
+      "|    business analyst|      84386|\n",
+      "|        data analyst|     256141|\n",
+      "|        bi developer|      86432|\n",
+      "|      java developer|      31332|\n",
+      "|   backend developer|     138135|\n",
+      "|             maneger|     167068|\n",
+      "| front end developer|     164374|\n",
+      "+--------------------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# groupby\n",
+    "# sum od salary by profile\n",
+    "ps_df.groupBy('Profile').sum('Salary').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+------------------+\n",
+      "|             Profile|       avg(Salary)|\n",
+      "+--------------------+------------------+\n",
+      "|             teacher|           57489.8|\n",
+      "|     software tester|           65360.5|\n",
+      "|       .net devloper|           54747.5|\n",
+      "|   software security|           69140.0|\n",
+      "|automation developer| 73811.33333333333|\n",
+      "|    business analyst|           42193.0|\n",
+      "|        data analyst| 85380.33333333333|\n",
+      "|        bi developer|           86432.0|\n",
+      "|      java developer|           31332.0|\n",
+      "|   backend developer|           69067.5|\n",
+      "|             maneger|55689.333333333336|\n",
+      "| front end developer|54791.333333333336|\n",
+      "+--------------------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "ps_df.groupBy('Profile').mean('Salary').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----+\n",
+      "|             Profile|count|\n",
+      "+--------------------+-----+\n",
+      "|             teacher|   10|\n",
+      "|     software tester|    2|\n",
+      "|       .net devloper|    2|\n",
+      "|   software security|    1|\n",
+      "|automation developer|    3|\n",
+      "|    business analyst|    2|\n",
+      "|        data analyst|    3|\n",
+      "|        bi developer|    1|\n",
+      "|      java developer|    1|\n",
+      "|   backend developer|    2|\n",
+      "|             maneger|    3|\n",
+      "| front end developer|    3|\n",
+      "+--------------------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "ps_df.groupBy('Profile').count().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+\n",
+      "|sum(Salary)|\n",
+      "+-----------+\n",
+      "|    2033556|\n",
+      "+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "ps_df.agg({'Salary':'sum'}).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+\n",
+      "|max(Salary)|\n",
+      "+-----------+\n",
+      "|      94892|\n",
+      "+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "ps_df.agg({'Salary':'max'}).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----------+\n",
+      "|             Profile|max(Salary)|\n",
+      "+--------------------+-----------+\n",
+      "|             teacher|      88794|\n",
+      "|     software tester|      78918|\n",
+      "|       .net devloper|      54845|\n",
+      "|   software security|      69140|\n",
+      "|automation developer|      88133|\n",
+      "|    business analyst|      43783|\n",
+      "|        data analyst|      94892|\n",
+      "|        bi developer|      86432|\n",
+      "|      java developer|      31332|\n",
+      "|   backend developer|      89113|\n",
+      "|             maneger|      72535|\n",
+      "| front end developer|      71443|\n",
+      "+--------------------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "ps_df.groupBy('Profile').max('Salary').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+------------------+\n",
+      "|             Profile|       avg(Salary)|\n",
+      "+--------------------+------------------+\n",
+      "|             teacher|           57489.8|\n",
+      "|     software tester|           65360.5|\n",
+      "|       .net devloper|           54747.5|\n",
+      "|   software security|           69140.0|\n",
+      "|automation developer| 73811.33333333333|\n",
+      "|    business analyst|           42193.0|\n",
+      "|        data analyst| 85380.33333333333|\n",
+      "|        bi developer|           86432.0|\n",
+      "|      java developer|           31332.0|\n",
+      "|   backend developer|           69067.5|\n",
+      "|             maneger|55689.333333333336|\n",
+      "| front end developer|54791.333333333336|\n",
+      "+--------------------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "ps_df.groupBy('Profile').agg({'Salary':'Avg'}).show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
