--- a/Notes/Challenges.ipynb
+++ b/Notes/Challenges.ipynb
@@ -69,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.7 (v3.6.7:6ec5cf24b7, Oct 20 2018, 13:35:33) [MSC v.1900 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
