--- a/Notes/03 Pyspark with Python/Pyspark With Python.ipynb
+++ b/Notes/03 Pyspark with Python/Pyspark With Python.ipynb
@@ -2523,6 +2523,463 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3072: DtypeWarning: Columns (0,123,124,125,128,129,130,133,139,140,141) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>member_id</th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>funded_amnt</th>\n",
+       "      <th>funded_amnt_inv</th>\n",
+       "      <th>term</th>\n",
+       "      <th>int_rate</th>\n",
+       "      <th>installment</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>sub_grade</th>\n",
+       "      <th>...</th>\n",
+       "      <th>hardship_payoff_balance_amount</th>\n",
+       "      <th>hardship_last_payment_amount</th>\n",
+       "      <th>disbursement_method</th>\n",
+       "      <th>debt_settlement_flag</th>\n",
+       "      <th>debt_settlement_flag_date</th>\n",
+       "      <th>settlement_status</th>\n",
+       "      <th>settlement_date</th>\n",
+       "      <th>settlement_amount</th>\n",
+       "      <th>settlement_percentage</th>\n",
+       "      <th>settlement_term</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>36 months</td>\n",
+       "      <td>10.33%</td>\n",
+       "      <td>324.23</td>\n",
+       "      <td>B</td>\n",
+       "      <td>B1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DirectPay</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>36 months</td>\n",
+       "      <td>13.56%</td>\n",
+       "      <td>84.92</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12000.0</td>\n",
+       "      <td>12000.0</td>\n",
+       "      <td>12000.0</td>\n",
+       "      <td>60 months</td>\n",
+       "      <td>13.56%</td>\n",
+       "      <td>276.49</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15000.0</td>\n",
+       "      <td>15000.0</td>\n",
+       "      <td>14975.0</td>\n",
+       "      <td>60 months</td>\n",
+       "      <td>14.47%</td>\n",
+       "      <td>352.69</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16000.0</td>\n",
+       "      <td>16000.0</td>\n",
+       "      <td>16000.0</td>\n",
+       "      <td>60 months</td>\n",
+       "      <td>17.97%</td>\n",
+       "      <td>406.04</td>\n",
+       "      <td>D</td>\n",
+       "      <td>D1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128411</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>36 months</td>\n",
+       "      <td>16.91%</td>\n",
+       "      <td>356.08</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128412</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128413</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128414</th>\n",
+       "      <td>Total amount funded in policy code 1: 2050909275</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128415</th>\n",
+       "      <td>Total amount funded in policy code 2: 820109297</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>128416 rows × 145 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      id  member_id  \\\n",
+       "0                                                    NaN        NaN   \n",
+       "1                                                    NaN        NaN   \n",
+       "2                                                    NaN        NaN   \n",
+       "3                                                    NaN        NaN   \n",
+       "4                                                    NaN        NaN   \n",
+       "...                                                  ...        ...   \n",
+       "128411                                               NaN        NaN   \n",
+       "128412                                               NaN        NaN   \n",
+       "128413                                               NaN        NaN   \n",
+       "128414  Total amount funded in policy code 1: 2050909275        NaN   \n",
+       "128415   Total amount funded in policy code 2: 820109297        NaN   \n",
+       "\n",
+       "        loan_amnt  funded_amnt  funded_amnt_inv        term int_rate  \\\n",
+       "0         10000.0      10000.0          10000.0   36 months   10.33%   \n",
+       "1          2500.0       2500.0           2500.0   36 months   13.56%   \n",
+       "2         12000.0      12000.0          12000.0   60 months   13.56%   \n",
+       "3         15000.0      15000.0          14975.0   60 months   14.47%   \n",
+       "4         16000.0      16000.0          16000.0   60 months   17.97%   \n",
+       "...           ...          ...              ...         ...      ...   \n",
+       "128411    10000.0      10000.0          10000.0   36 months   16.91%   \n",
+       "128412        NaN          NaN              NaN         NaN      NaN   \n",
+       "128413        NaN          NaN              NaN         NaN      NaN   \n",
+       "128414        NaN          NaN              NaN         NaN      NaN   \n",
+       "128415        NaN          NaN              NaN         NaN      NaN   \n",
+       "\n",
+       "        installment grade sub_grade  ... hardship_payoff_balance_amount  \\\n",
+       "0            324.23     B        B1  ...                            NaN   \n",
+       "1             84.92     C        C1  ...                            NaN   \n",
+       "2            276.49     C        C1  ...                            NaN   \n",
+       "3            352.69     C        C2  ...                            NaN   \n",
+       "4            406.04     D        D1  ...                            NaN   \n",
+       "...             ...   ...       ...  ...                            ...   \n",
+       "128411       356.08     C        C5  ...                            NaN   \n",
+       "128412          NaN   NaN       NaN  ...                            NaN   \n",
+       "128413          NaN   NaN       NaN  ...                            NaN   \n",
+       "128414          NaN   NaN       NaN  ...                            NaN   \n",
+       "128415          NaN   NaN       NaN  ...                            NaN   \n",
+       "\n",
+       "       hardship_last_payment_amount disbursement_method  debt_settlement_flag  \\\n",
+       "0                               NaN           DirectPay                     N   \n",
+       "1                               NaN                Cash                     N   \n",
+       "2                               NaN                Cash                     N   \n",
+       "3                               NaN                Cash                     N   \n",
+       "4                               NaN                Cash                     N   \n",
+       "...                             ...                 ...                   ...   \n",
+       "128411                          NaN                Cash                     N   \n",
+       "128412                          NaN                 NaN                   NaN   \n",
+       "128413                          NaN                 NaN                   NaN   \n",
+       "128414                          NaN                 NaN                   NaN   \n",
+       "128415                          NaN                 NaN                   NaN   \n",
+       "\n",
+       "       debt_settlement_flag_date settlement_status settlement_date  \\\n",
+       "0                            NaN               NaN             NaN   \n",
+       "1                            NaN               NaN             NaN   \n",
+       "2                            NaN               NaN             NaN   \n",
+       "3                            NaN               NaN             NaN   \n",
+       "4                            NaN               NaN             NaN   \n",
+       "...                          ...               ...             ...   \n",
+       "128411                       NaN               NaN             NaN   \n",
+       "128412                       NaN               NaN             NaN   \n",
+       "128413                       NaN               NaN             NaN   \n",
+       "128414                       NaN               NaN             NaN   \n",
+       "128415                       NaN               NaN             NaN   \n",
+       "\n",
+       "       settlement_amount  settlement_percentage  settlement_term  \n",
+       "0                    NaN                    NaN              NaN  \n",
+       "1                    NaN                    NaN              NaN  \n",
+       "2                    NaN                    NaN              NaN  \n",
+       "3                    NaN                    NaN              NaN  \n",
+       "4                    NaN                    NaN              NaN  \n",
+       "...                  ...                    ...              ...  \n",
+       "128411               NaN                    NaN              NaN  \n",
+       "128412               NaN                    NaN              NaN  \n",
+       "128413               NaN                    NaN              NaN  \n",
+       "128414               NaN                    NaN              NaN  \n",
+       "128415               NaN                    NaN              NaN  \n",
+       "\n",
+       "[128416 rows x 145 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"LoanStats_2018Q4.csv\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "51366.4"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df)*0.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.iloc[:10000].to_csv(\"demo10000.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
