20230214 added Importing and using modules

--- a/Notes/04 LinkedIn Learning Python/Ch1 Basic.ipynb
+++ b/Notes/04 LinkedIn Learning Python/Ch1 Basic.ipynb
@@ -478,6 +478,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Importing and using modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sqaure root of 16 is 4.0\n",
+      "The PI is 3.141592653589793\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TODO : import the math module, which contains fetures for working with math\n",
+    "import math\n",
+    "\n",
+    "# TODO : the math module contains lots of pre-bulit functions\n",
+    "print(f\"The sqaure root of 16 is {math.sqrt(16)}\")\n",
+    "\n",
+    "# TODO : in addition of functions, some modules contains useful contantants\n",
+    "print(f\"The PI is {math.pi}\")\n",
+    "\n",
+    "# TODO : Try some of the math function for yourself here\n",
+    "# https://www.w3schools.com/python/module_math.asp"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
