20230214 added Using exceptions

--- a/Notes/04 LinkedIn Learning Python/Ch1 Basic.ipynb
+++ b/Notes/04 LinkedIn Learning Python/Ch1 Basic.ipynb
@@ -513,6 +513,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# using exceptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What should I divide 10 by : 7\n",
+      "1.4285714285714286\n",
+      "This code always runs !!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Errors can be happen in programs, and we need a clean way to handle them\n",
+    "# TODO : This code cause an error because you cant'n divide by zero\n",
+    "#x = 10/0\n",
+    "\"\"\"\n",
+    "---------------------------------------------------------------------------\n",
+    "ZeroDivisionError                         Traceback (most recent call last)\n",
+    "<ipython-input-3-076abdb8a002> in <module>\n",
+    "      1 # Errors can be happen in programs, and we need a clean way to handle them\n",
+    "      2 # TODO : This code cause an error because you cant'n divide by zero\n",
+    "----> 3 x = 10/0\n",
+    "\n",
+    "ZeroDivisionError: division by zero\n",
+    "\"\"\"\n",
+    "\n",
+    "# TODO : Exceptions provide a way of catching errors and then handeling them\n",
+    "# in a separate section of the code to group them together\n",
+    "#try:\n",
+    "    #x = 10/0\n",
+    "#except:\n",
+    "    #print(\"Well that divide didn't work!!!\")\n",
+    "\n",
+    "    \n",
+    "# TODO : you can also catch specific exception\n",
+    "try:\n",
+    "    answer = input(\"What should I divide 10 by : \")\n",
+    "    num = int(answer)\n",
+    "    print(10/num)\n",
+    "except ZeroDivisionError as e:\n",
+    "    print(\"You can't divide by zero !!!\")\n",
+    "except ValueError as e:\n",
+    "    print(\"You didn't give me a valid number !!!\")\n",
+    "    print(e)\n",
+    "finally:\n",
+    "    print(\"This code always runs !!!\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
