20230214 added Challenge : Palindromes

--- a/Notes/04 LinkedIn Learning Python/Ch1 Basic.ipynb
+++ b/Notes/04 LinkedIn Learning Python/Ch1 Basic.ipynb
@@ -572,6 +572,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Challenge : Palindromes\n",
+    "\n",
+    "- Find palindromes \n",
+    "\n",
+    "- Expected output : \n",
+    "    - (Radar) palindrome test : True\n",
+    "    - (Madam, I'm Adam.) palindrome test : True\n",
+    "    - (123321) palindrome test : True\n",
+    "    - (Hello World) palindrome test : False\n",
+    "\n",
+    "- Hint : str.isalnum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter you value or 'exit' to close program : ihhi\n",
+      "(ihhi) Palindrome test : True\n",
+      "Enter you value or 'exit' to close program : 123321\n",
+      "(123321) Palindrome test : True\n",
+      "Enter you value or 'exit' to close program : Madam, I'm Adam.\n",
+      "(madamimadam) Palindrome test : True\n",
+      "Enter you value or 'exit' to close program : Radar\n",
+      "(radar) Palindrome test : True\n",
+      "Enter you value or 'exit' to close program : love\n",
+      "(love) Palindrome test : False\n",
+      "Enter you value or 'exit' to close program : exit\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isPalindrome(val_str):\n",
+    "    if val_str == val_str[::-1]:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "def main():\n",
+    "    while True:\n",
+    "        val = input(\"Enter you value or 'exit' to close program : \")\n",
+    "        if val ==\"exit\":\n",
+    "            break\n",
+    "        new_str = \"\"\n",
+    "        for v in val:\n",
+    "            if v.isalnum():\n",
+    "                new_str += v.lower()\n",
+    "        print(f\"({new_str}) Palindrome test : {isPalindrome(new_str)}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
