20230216 added Using filesystem shell methods

--- a/Notes/04 LinkedIn Learning Python/Ch2 Working with files.ipynb
+++ b/Notes/04 LinkedIn Learning Python/Ch2 Working with files.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -36,26 +36,6 @@
       "This is some text \n",
       "\n",
       "This is some text \n",
-      "\n",
-      "This is some text \n",
-      "\n",
-      "This is some text \n",
-      "\n",
-      "This is some text \n",
-      "\n",
-      "This is some text \n",
-      "\n",
-      "This is some text \n",
-      "\n",
-      "This is some text \n",
-      "\n",
-      "This is some text \n",
-      "\n",
-      "This is some text \n",
-      "\n",
-      "This is some text \n",
-      "\n",
-      "This is some text \n",
       "\n"
      ]
     }
@@ -63,17 +43,17 @@
    "source": [
     "def main():\n",
     "    # Open a file for writing and create it if it doesn't exist\n",
-    "    #myfile = open(\"textfile.txt\", \"w+\")\n",
+    "    myfile = open(\"textfile.txt\", \"w+\")\n",
     "    \n",
     "    # Open file file for appending text to the end \n",
     "    #myfile = open(\"textfile.txt\", \"a+\")\n",
     "    \n",
     "    # write some lines for the data to the file \n",
-    "    #for _ in range(10):\n",
-    "        #myfile.write(\"This is some text \\n\")\n",
+    "    for _ in range(10):\n",
+    "        myfile.write(\"This is some text \\n\")\n",
     "    \n",
     "    # Close the file when done\n",
-    "    #myfile.close()\n",
+    "    myfile.close()\n",
     "    \n",
     "    # Open the file back up and read the contents \n",
     "    myfile = open(\"textfile.txt\", \"r\")\n",
@@ -99,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -112,10 +92,10 @@
       "Item is a directory : False\n",
       "Item's path' : D:\\test\\Basic_Python\\Notes\\04 LinkedIn Learning Python\\textfile.txt\n",
       "Item's path and name : ('D:\\\\test\\\\Basic_Python\\\\Notes\\\\04 LinkedIn Learning Python', 'textfile.txt')\n",
-      "Thu Feb 16 13:13:16 2023\n",
-      "2023-02-16 13:13:16.228076\n",
-      "It has been 0:27:43.949125 since the file was modified\n",
-      "OR, 1663.949125 seconds\n"
+      "Thu Feb 16 14:05:39 2023\n",
+      "2023-02-16 14:05:39.110961\n",
+      "It has been 0:00:09.622226 since the file was modified\n",
+      "OR, 9.622226 seconds\n"
      ]
     }
    ],
@@ -154,6 +134,52 @@
     "          \n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using filesystem shell methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from os import path\n",
+    "import shutil # shell utility -> to work with filesystem shell methods \n",
+    "from shutil import make_archive\n",
+    "from zipfile import ZipFile\n",
+    "\n",
+    "def main():\n",
+    "    # make a duplicate of an existing file\n",
+    "    if path.exists(\"textfile.txt\"):\n",
+    "        # get the path to the file in the current directory \n",
+    "        src = path.realpath(\"textfile.txt\")\n",
+    "        \n",
+    "        # let's make a backup copy by appending \"bak\" to the name\n",
+    "        dest = src + \".bak\"\n",
+    "        shutil.copy(src, dest)\n",
+    "        \n",
+    "        # rename the original file\n",
+    "        #os.rename(\"textfile.txt\", \"newfile.txt\")\n",
+    "        \n",
+    "        # now put things into a ZIP archive \n",
+    "        root_dir, tail = path.split(src)\n",
+    "        make_archive(\"archive\", \"zip\", root_dir)\n",
+    "        \n",
+    "        # more fine-grained control over ZIP files\n",
+    "        with ZipFile(\"testzip.zip\", \"w\") as newzip:\n",
+    "            newzip.write(\"newfile.txt\")\n",
+    "            newzip.write(\"textfile.txt.bak\")\n",
+    "    \n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   },
   {
