20230216 added Challenge : Files

--- a/Notes/04 LinkedIn Learning Python/Ch2 Working with files.ipynb
+++ b/Notes/04 LinkedIn Learning Python/Ch2 Working with files.ipynb
@@ -183,6 +183,128 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Challenge : Files\n",
+    "\n",
+    "- Create a new dir. Create a text file within that dir. Write in that file the listing of all the current file in that dir along with thye total byte count of all thous files.\n",
+    "\n",
+    "- Expected output:\n",
+    "    - result\\\\result.txt\n",
+    "        - Total bytecount : xxx\n",
+    "            \n",
+    "            File List:\n",
+    "            \n",
+    "            -----------\n",
+    "            \n",
+    "            abc.txt\n",
+    "            \n",
+    "            pqr.txt\n",
+    "            \n",
+    "            ...\n",
+    "            \n",
+    "- Hint : os.mkdir(), os.listdir()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_size = 0\n",
+    "file_list = []\n",
+    "for file_name in os.listdir():\n",
+    "    src_file_path = path.realpath(file_name)\n",
+    "    root_dir, tail = path.split(src_file_path)\n",
+    "    if path.isfile(file_name):\n",
+    "        file_list.append(file_name)\n",
+    "        file_stats = os.stat(file_name)\n",
+    "        file_size += float(file_stats.st_size)\n",
+    "\n",
+    "#os.mkdir(\"result\")\n",
+    "os.makedirs(\"result\", exist_ok=True)\n",
+    "myfile = open(\"result\\\\result.txt\", \"w+\")\n",
+    "myfile.write(f\"Total bytecount : {file_size} \\n\")\n",
+    "myfile.write(\"File List : \\n\")\n",
+    "myfile.write(\"_\"*30)\n",
+    "myfile.write(\"\\n\")\n",
+    "for file_name in file_list:\n",
+    "    myfile.write(f\"{file_name} \\n\")\n",
+    "myfile.close() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    file_size = 0\n",
+    "    file_list = []\n",
+    "    for file_name in os.listdir():\n",
+    "        src_file_path = path.realpath(file_name)\n",
+    "        root_dir, tail = path.split(src_file_path)\n",
+    "        if path.isfile(file_name):\n",
+    "            file_list.append(file_name)\n",
+    "            file_stats = os.stat(file_name)\n",
+    "            file_size += float(file_stats.st_size)\n",
+    "\n",
+    "    #os.mkdir(\"result\")\n",
+    "    os.makedirs(\"result\", exist_ok=True)\n",
+    "    myfile = open(\"result\\\\result.txt\", \"w+\")\n",
+    "    myfile.write(f\"Total bytecount : {file_size} \\n\")\n",
+    "    myfile.write(\"File List : \\n\")\n",
+    "    myfile.write(\"_\"*30)\n",
+    "    myfile.write(\"\\n\")\n",
+    "    for file_name in file_list:\n",
+    "        myfile.write(f\"{file_name} \\n\")\n",
+    "    myfile.close()\n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os \n",
+    "\n",
+    "totalbytes = 0\n",
+    "\n",
+    "# get list of all the files in the current directory\n",
+    "dirlist = os.listdir()\n",
+    "for entry in dirlist:\n",
+    "    # make sure it's a file\n",
+    "    if os.path.isfile(entry):\n",
+    "        # add the file size to the total\n",
+    "        filesize = os.path.getsize(entry)\n",
+    "        totalbytes += filesize\n",
+    "        \n",
+    "# create a subdirectory called \"results\"\n",
+    "os.mkdir(\"results\")\n",
+    "\n",
+    "# create the output file\n",
+    "resultfile = open(\"results\\\\result.txt\", \"w+\")\n",
+    "if resultfile.mode == \"w+\":\n",
+    "    resultfile.write(f\"Total bytecount : {totalbytes} \\n\")\n",
+    "    resultfile.write(\"Files list : \\n\")\n",
+    "    resultfile.write(\"-------------\\n\")\n",
+    "    # write the result into the file\n",
+    "    for entry in dirlist:\n",
+    "        if os.path.isfile(entry):\n",
+    "            # write the filr nsmr to the results ledger\n",
+    "            resultfile.write(entry+\"\\n\")\n",
+    "    # close the file when done\n",
+    "    resultfile.close()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
