--- a/Notes/04 LinkedIn Learning Python/Ch3 Using Dates and Times.ipynb
+++ b/Notes/04 LinkedIn Learning Python/Ch3 Using Dates and Times.ipynb
@@ -214,7 +214,7 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -495,19 +495,13 @@
     "            print(f\"There are {day_count} of those days in the month and year specified. \")\n",
     "        except Exception as e:\n",
     "            print(f\"Error : {e}\")\n",
+    "            print(\"Sorry, this is not valid input.\")\n",
     "        finally:\n",
     "            print(\"----\"*20)\n",
     "        \n",
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
